--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Swap</title>
     <style>
-        #image-container {
-            text-align: center;
-            margin-top: 50px;
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        #image {
-            width: 100%;
-            height: auto;
+        img {
             max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
             display: block;
-            margin: 0 auto;
         }
     </style>
 </head>
 <body>
 
-<div id="image-container">
-    <img id="image" src="https://static.wixstatic.com/media/7b5caa_84c65a275e9b4e7285a611162db0bfc3~mv2.webp" alt="Default Image">
-</div>
+<img id="image" src="https://static.wixstatic.com/media/7b5caa_84c65a275e9b4e7285a611162db0bfc3~mv2.webp" alt="Default Image">
 
 <script>
     // Set the specific times for the image swap
@@ -62,4 +65,3 @@
 
 </body>
 </html>
-
